--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
       <div class="testimonials">
         <div class="testimonial">
           <q>We're always impressed by how quick Ed is to get things done. I can honestly say Ed offers the best website services we've ever used - and we've used a few!</q>
-          <div class="from">Matt, Leisure Boats UK</div>
+          <div class="from">Leam Boat Centre</div>
         </div>
         <div class="testimonial">
           <q>I'm very satisfied with the work Ed's done for me. I trust him to know what's best for our site. His ongoing tech support (4 years and counting) has been fantastic.</q>
-          <div class="from">Rowena, Plakias Panorama</div>
+          <div class="from">Wight Waves Holidays</div>
         </div>
         <div class="testimonial">
           <q>A hardworking developer with the energy and drive to get better with everything he does. I'm very satisfied with the work he's done with us on design and code.</q>
-          <div class="from">Jess, DSC</div>
+          <div class="from">Agency (DSC)</div>
         </div>
       </div>
     </section>
