Fix prelude of work list

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     
     <section class="section section-history" id="history">
       <div class="history-intro">
-        <p>I'm proud to provide ongoing support to a variety of clients, big and small. I've worked on several more, this shows the projects that I maintain to this day and have since the year shown.</p>
+        <p>I'm proud to provide ongoing support to a variety of clients, big and small. Dates listed represent is when the website first launched. and all are still going strong.</p>
       </div>
       <div class="history">
         <div class="history-item">
