--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="work-information">
               <h3 class="work-project-title">Silver Marketing Association <a class="work-view-btn" href="https://silvermarketingassociation.org" target="_blank">Visit</a></h3>
-              <p class="work-role">Subscriptions &amp; membership, event ticketing, WooCommerce e-commerce development</p>
+              <p class="work-role">Recurring payments, members-only content, event tickets, bespoke WooCommerce development</p>
               <!-- <p class="work-desc">I worked with the team once again to launch a fully decked out online store for the official UK distributor of Walker Bay boating products. I'm especially proud of the shop's support for paying with credit/debit cards via Stripe integration.</p> -->
             </div>
           </div>
@@ -52,7 +52,7 @@
             </div>
             <div class="work-information">
               <h3 class="work-project-title">Leam Boat Centre <a class="work-view-btn" href="http://leamboatcentre.com" target="_blank">Visit</a></h3>
-              <p class="work-role">WooCommerce (and WordPress) e-commerce development, SEO, copy writing</p>
+              <p class="work-role">WooCommerce &amp; WordPress (supporting 1,000+ products), extensive theming and design</p>
               <!-- <p class="work-desc">I worked with a local driving instructor on improving his site and creating a bold new design. The rich green colours and clear typography provide visual impact, so the site leaves a lasting impression.</p> -->
             </div>
           </div>
@@ -65,7 +65,7 @@
             </div>
             <div class="work-information">
               <h3 class="work-project-title">Wight Waves Holidays <a class="work-view-btn" href="http://wightwavesholidays.co.uk" target="_blank">Visit</a></h3>
-              <p class="work-role">WordPress development, online booking &amp; payments (Airbnb, TripAdvisor)</p>
+              <p class="work-role">Online reservations (API to Airbnb, TripAdvisor), WordPress development, SEO &amp; copy</p>
               <!-- <p class="work-desc">I produced a clean and clear site to help my mum, a qualified acupuncturist, massage therapist &amp; beauty therapist. The site is aimed at helping people to learn more about her, see what she can do to help them and find out her treatment prices quickly.</p> -->
             </div>
           </div>
