--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     
     <section class="section section-history" id="history">
       <div class="history-intro">
-        <p>I'm proud to provide ongoing support to a variety of clients, big and small. Dates listed represent is when the website first launched. and all are still going strong.</p>
+        <p>I'm proud to provide ongoing support to a variety of clients, big and small. Dates listed represent is when the website first launched. All are still going strong.</p>
       </div>
       <div class="history">
         <div class="history-item">
@@ -177,7 +177,7 @@
         <div class="history-item">
           <div class="history-inner">
             <a class="history-item-title" href="http://riseandshine.uk.net">Rise & Shine</a>
-            <p class="history-item-description">Bespoke systems, 2015</p>
+            <p class="history-item-description">Consulting (WordPress), 2015</p>
           </div>
         </div>
         <div class="history-item">
@@ -201,7 +201,7 @@
         <div class="history-item">
           <div class="history-inner">
             <span class="history-item-title">And more!</span>
-            <p class="history-item-description">Some work isn't listed, such as projects that are in development. Check back soon!</p>
+            <p class="history-item-description">Some work isn't listed, such as projects where I was a team member but not lead.</p>
           </div>
         </div>
       </div>
