--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="history-item">
           <div class="history-inner">
             <span class="history-item-title">And more!</span>
-            <p class="history-item-description">Some work isn't listed, such as projects where I was a team member but not lead.</p>
+            <p class="history-item-description">Some work isn't listed, such as if I worked with a team I didn't lead.</p>
           </div>
         </div>
       </div>
