--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </section>
 
     <section class="section section-prices" id="prices">
-      <p class="prices-larger">A website usually costs around £500.</p>
+      <p class="prices-larger">A website usually costs, in total, £1,000.</p>
       <p>Around being the operative word. Prices vary based on the specifics of what needs to be done - but I will do it! I encourage you to get in contact with me if you'd like to work with me.</p>
       <p>This will involve a short chat on the phone as we discuss your requirements and I figure out a custom solution for your specific needs. I do not offer pre-made package pricing as I find every job is different.</p>
       <p>I won't charge a daily nor hourly rate if I can avoid it, as instead I prefer to quote an exact figure. You approve that before work begins, so you know exactly how much everything costs.</p>
