--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
     <section class="section section-prices" id="prices">
       <p class="prices-larger">A website usually costs, in total, £1,000.</p>
-      <p>Around being the operative word. Prices vary based on the specifics of what needs to be done - but I will do it! I encourage you to get in contact with me if you'd like to work with me.</p>
+      <p>Prices vary based on the specifics of what needs to be done - and I can do it all! I encourage you to get in contact with me if you'd like to work with me.</p>
       <p>This will involve a short chat on the phone as we discuss your requirements and I figure out a custom solution for your specific needs. I do not offer pre-made package pricing as I find every job is different.</p>
       <p>I won't charge a daily nor hourly rate if I can avoid it, as instead I prefer to quote an exact figure. You approve that before work begins, so you know exactly how much everything costs.</p>
       <p>You pay nothing until work is completed and you're happy. I will absorb any extras costs (purchasing of your domain name, hosting, email accounts, and so on) and pass that on to you later. I do this as a courtesy so your website operates smoothly without you needing to worry about the impending bills.</p>
